--- a/index.html
+++ b/index.html
@@ -1,57 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
-  </head>
-  <body style="background-color: #ddd">
-    <div class="container mt-4">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="card">
-            <div class="card-body">
-              <form id="miFormulario" action="">
-                <div class="mt-3">
-                  <label for="">Nombres</label>
-                  <input type="text" id="nombres" class="form-control" placeholder="Ingresa sus nombres"/>
-                </div>
-                <div class="mt-3">
-                  <label for="">Apellidos</label>
-                  <input type="text" id="apellidos" class="form-control" placeholder="Ingresa su apellido"/>
-                </div>
-                <div class="mt-3">
-                  <label for="">Correo</label>
-                  <input type="text" id="correo" class="form-control" placeholder="Ingrese su correo" />
-                </div>
-                <button type="button" onclick="guardarUsuario()" class="btn btn-primary w-100 mt-3">Guardar</button>
-              </form>
+    <link rel="stylesheet" href="">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./index.css">
+</head>
+<body class="theme-light" id="body"> 
+    <div class="container">
+        <div class="row mt-5">
+            <div class="col-md-6">
+                <select name="" class="form-select" id="idioma" onchange="cambiaridioma()">
+                    <option value="">seleccionar idoma</option>
+                    <option value="es">español</option>
+                    <option value="en">ingles</option>
+                </select>
             </div>
-          </div>
-        </div>
-        <div class="col-md-8">
-          <div class="card">
-            <div class="card-body">
-              <div class="table-responsive">
-                <table id="tablaContenido" class="table table-striped table-hover table-sm">
-                  <thead>
-                    <tr class="bg-primary text-white">
-                      <th>NOMBRES</th>
-                      <th>APELLIDOS</th>
-                      <th>CORREO</th>
-                      <th>ACCIONES</th>
-                    </tr>
-                  </thead>
-                  <!-- AQUI va el nuevo contenido-->
-                  <tbody id="cuerpoTabla"></tbody>
-                </table>
-              </div>
+            <div class="col-md-6">
+                <select name="" id="theme" class="form-select" id="" onchange="themepage()">
+                    <option value="">seleccionar tema</option>
+                    <option value="light">claro</option>
+                    <option value="dark">oscuro</option>
+                </select>
             </div>
-          </div>
+         </div>
+         <div class="row mt-5">
+            <div class="col-md-3">
+                <div class="card">
+                    <img class="img-fluid" src="./images/hamburguesa-1.webp" alt="">
+                    <div class="card-body">
+                        <p class="price"><strong>$8.900</strong></p>
+                        <h4 id="titulo-1" class="name-product"><strong>BBQ crunch</strong></h4>
+                        <p id="parrafo-1" class="description-product">1 sandwich BBQ crunch (1 filete de pollo apanado)... <br> <br></p>
+                        <button class="btn btn-danger w-100">comprar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img class="img-fluid" src="./images/hamburguesa-2.webp" alt="">
+                    <div class="card-body">
+                        <p class="price"><strong>$15.900</strong></p>
+                        <h4 id="titulo-2" class="name-product"><strong>kentucky sandwich</strong></h4>
+                        <p id="parrafo-2" class="description-product">1  kentuchy hamburguesa / sandwich 1 filete de pechuga de pollo apanado, pepinillos...</p>
+                        <button class="btn btn-danger w-100">comprar</button>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img class="img-fluid" src="./images/hamburguesa-3.webp" alt="">
+                    <div class="card-body">
+                        <p class="price"><strong>$815.900</strong></p>
+                        <h4 id="titulo-3" class="name-product"><strong>combo BBQ crunch</strong></h4>
+                        <p id="parrafo-3" class="description-product">1 sandwich BBQ crunch ( 1filete de pollo apanado)+ 1 papas pequeñas +1 gaseosapet</p>
+                        <button class="btn btn-danger w-100">comprar</button>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img class="img-fluid" src="./images/hamburguesa-4.webp" alt="">
+                    <div class="card-body">
+                        <p class="price"><strong>$16.900</strong></p>
+                        <h4 id="titulo-4" class="name-product"><strong>kemtuchy coronal</strong></h4>
+                        <p id="parrafo-4" class="description-product">1 kentichy coronal hamburguesa / sandwich filete de pechuga de pollo apanado, ensalada </p>
+                        <button class="btn btn-danger w-100">comprar</button>
+
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
+        <div class="row mt-5">
+        <div class="col-md-3">
+            <div class="card">
+                <img class="img-fluid" src="./images/hamburguesa-5.webp" alt="">
+                <div class="card-body">
+                    <p class="price"><strong>$21.900</strong></p>
+                    <h4 id="titulo-5" class="name-product"><strong>combo kentuchy sandwich</strong></h4>
+                    <p id="parrafo-5" class="description-product">1 kentuchy hamburguesa/sandwich(1 filete de pechuga de pollo apanado)... <br> <br></p>
+                    <button class="btn btn-danger w-100">comprar</button>
+
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card">
+                <img class="img-fluid" src="./images/hamburguesa-6.webp" alt="">
+                <div class="card-body">
+                    <p class="price"><strong>$22.900</strong></p>
+                    <h4 id="parrafo-6" class="name-product"><strong>combo kentuchy coronel sandwich</strong></h4>
+                    <p id="parrafo-6" class="description-product">1 kentuchy coronal hamburguesa/sandwich 1 filete de pechuga de pollo apanado ensalada...</p>
+                    <button class="btn btn-danger w-100">comprar</button>
+
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card">
+                <img class="img-fluid" src="./images/hamburguesa-7.webp" alt="">
+                <div class="card-body">
+                    <p class="price"><strong>$23.900</strong></p>
+                    <h4 id="titulo-7" class="name-product"><strong>sandwich crispy BBQ</strong></h4>
+                    <p id="parrafo-7" class="description-product">1 sandwich crispy BBQ 1 filete de pechuga extra grande triple empanizado cebolla crisp... <br> <br></p>
+                    <button class="btn btn-danger w-100">comprar</button>
+
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card">
+                <img class="img-fluid" src="./images/hamburguesa-8.webp" alt="">
+                <div class="card-body">
+                    <p class="price"><strong>$29.900</strong></p>
+                    <h4 id="titulo-8" class="name-product"><strong>combo sandwich crispy BBQ</strong></h4>
+                    <p id="parrafo-8" class="description-product">1 sandwich crispy BBQ 1 filete de pechuga extra grande triple empanizado cebolla crispi...</p>
+                    <button class="btn btn-danger w-100">comprar</button>
+
+                </div>
+            </div>
+        </div>       
     </div>
-    <script src="./index.js"></script>
-  </body>
+    <footer>
+        <div class="row mt-5" >
+            <div class="col-md-2"> 
+
+            </div>
+        </div>
+    </footer>
+   <script src="./index.js"></script>
+    
+</body>
 </html>
